# systech-aidd

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHAT_TESTING.md  Makefile  README.md  SPRINT_S5_SUMMARY.md  check_db.py  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  test_commands.md
.cursor/commands/: review.md
.cursor/plans/: postgresql-migration-s1-23f14004.plan.md  sprint-1-mock-api-f9bf07e0.plan.md  sprint-2-frontend-init-47eff5e9.plan.md  sprint-3-dashboard-implementation-72910e94.plan.md  sprint-s4-real-api-4b3d5432.plan.md  sprint-s5-ai-chat-53958c12.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc
.github/workflows/: build.yml
backend/: __init__.py
backend/api/: API_EXAMPLES.md  README.md  __init__.py  __main__.py  chat_service.py  collectors.py  config.py  models.py  prompts.py  protocols.py  server.py  sql_generator.py
devops/: .dockerignore.bot  dockerfile.api  dockerfile.bot  dockerfile.frontend
devops/doc/: devops-roadmap.md  github-actions-guide.md
docs/: conventions.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_dept.md  vision.md  workflow.md  workflow_tech_debt.mdc
docs/guides/: README.md  architecture.md  codebase_tour.md  (+4 more)
frontend/: .env.example  .gitignore  .npmrc  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
migrations/: 001_init_schema.sql
src/: __init__.py  config.py  main.py
tests/: __init__.py  test_api_mock.py  test_api_real.py  test_bot_handlers.py  test_config.py  test_llm_client.py  test_storage_database.py
(+47 files in other folders)
