[project]
name = "systech-aidd"
version = "0.1.0"
description = "AI-powered Telegram bot assistant"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []

